# housing-scout

./: .gitignore  Cargo.toml  README.md  SYSTEM_INIT_PROMPT.md
src/: main.rs
src/models/: mod.rs
src/scrapers/: booli.rs  browser.rs  mod.rs  traits.rs  types.rs
